# rskan

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: REGRESSION.md
docs/superpowers/plans/: 2026-05-26-rskan-v1-kanlayer.md
fixtures/: README.md  manifest.json
fixtures/kan_w21x21x21_k3_g5_s1/: grad_x.npy  params.json  trajectory_l0.npy  trajectory_l1.npy  x.npy
fixtures/kan_w8x8x8x8_k3_g5_s1/: grad_x.npy  params.json  trajectory_l0.npy  trajectory_l1.npy  x.npy  y.npy
fixtures/kanlayer_i1_o1_k3_g5_s1/: coef.npy  grad_coef.npy  grad_scale_base.npy  grad_scale_sp.npy  grad_x.npy  grid.npy  params.json  scale_base.npy  x.npy  y.npy
fixtures/kanlayer_i21_o21_k3_g5_s1/: coef.npy  grad_coef.npy  grad_scale_base.npy  grad_scale_sp.npy  grad_x.npy  mask.npy  params.json  scale_base.npy  y.npy
fixtures/kanlayer_i3_o3_k3_g1_s1/: coef.npy  grad_coef.npy  grad_scale_base.npy  grad_scale_sp.npy  grad_x.npy  grid.npy  mask.npy  params.json  scale_base.npy  x.npy  y.npy
fixtures/kanlayer_i3_o3_k3_g5_s1_ood/: coef.npy  grad_coef.npy  grad_scale_base.npy  grad_scale_sp.npy  grad_x.npy  grid.npy  params.json  scale_base.npy  scale_sp.npy  x.npy  y.npy
fixtures/kanlayer_i3_o5_k2_g3_s1/: coef.npy  grad_coef.npy  grad_scale_base.npy  grad_scale_sp.npy  grad_x.npy  grid.npy  mask.npy  params.json  scale_base.npy  scale_sp.npy  y.npy
fixtures/kanlayer_i8_o8_k3_g5_s1/: coef.npy  grad_coef.npy  grad_scale_base.npy  grad_scale_sp.npy  grad_x.npy  grid.npy  params.json  scale_sp.npy  y.npy
rskan/: Cargo.toml
rskan-py/: Cargo.toml  pyproject.toml
rskan-py/python/rskan/: __init__.py  _torch.py
rskan-py/src/: kan.rs  layer.rs  lib.rs
rskan-py/tests/: test_parity_pykan.py  test_smoke.py
rskan/benches/: kanlayer_forward.rs
rskan/examples/: tiny_regression.rs
rskan/src/: init.rs  kan.rs  layer.rs  lib.rs  linalg.rs  spline.rs
rskan/tests/: cross_backend.rs  init_smoke.rs  kan_stack.rs  linalg_unit.rs  parity_backward.rs  parity_forward.rs  spline_unit.rs
rskan/tests/common/: assert_close.rs  fixture.rs  mod.rs  tolerances.rs
scripts/: export_pykan_fixtures.py
(+28 files in other folders)
