[package]
name = "rskan-py"
description = "PyO3 Python bindings for rskan."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name       = "_rskan_py"
crate-type = ["cdylib"]

[dependencies]
rskan = { path = "../rskan" }
pyo3  = { version = "0.22", features = ["extension-module", "abi3-py38"] }
numpy = "0.22"
burn  = { version = "0.21", default-features = false, features = ["std", "ndarray", "autodiff"] }

[features]
default = []
cuda    = ["rskan/cuda"]
