[package]
name = "rskan"
description = "Burn-based KAN (Kolmogorov-Arnold Network) layers — pykan parity for ddrs."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
burn      = { version = "0.21", default-features = false, features = ["std", "ndarray", "autodiff"] }
burn-cuda = { version = "0.21", default-features = false, optional = true }
ndarray   = "0.16"
rand      = "0.8"
thiserror = "1"

[features]
default = []
cuda    = ["burn-cuda"]

[dev-dependencies]
burn        = { version = "0.21", default-features = false, features = ["std", "ndarray", "autodiff", "train"] }
ndarray-npy = "0.9"
approx      = "0.5"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
criterion   = "0.5"

[[bench]]
name    = "kanlayer_forward"
harness = false
